<resources>
    <string name="app_name">BirthDayMemo</string>
    <string name="add_item">增加条目</string>
    <string name="add">添加</string>
    <string name="name">姓名</string>
    <string name="birthday">生日</string>
    <string name="gift">礼物</string>

    <string name="dialog_title">ヽ(*￣∀￣)ﾉ～★恭喜发财★～</string>

    <string name="dialog_name">姓名 ： </string>
    <string name="dialog_birthday">生日 ： </string>
    <string name="dialog_gift">礼物 ： </string>
    <string name="dialog_phone">手机 ： </string>

    <string name="keep_change">保存修改</string>
    <string name="giveup_change">放弃修改</string>

    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="delete_or_not">是否删除</string>

    <string name="name_can_not_be_empty">名字不能为空</string>
    <string name="name_repeated">已经有相同的名字</string>
    <string name="add_successfully">成功添加</string>
</resources>
