<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="30dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title"
        style="@style/tableTitle"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_name"/>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            style="@style/dialog_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_birthday" />
        <EditText
            style="@style/dialog_item"
            android:id="@+id/dialog_birthday"
            android:layout_weight="10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            style="@style/dialog_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_gift"/>
        <EditText
            style="@style/dialog_item"
            android:id="@+id/dialog_gift"
            android:layout_weight="10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            style="@style/dialog_item_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_phone"/>
        <TextView
            style="@style/dialog_item_phone"
            android:id="@+id/dialog_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_phone"/>
    </LinearLayout>
</LinearLayout>